Sun Jan 11 13:29:18 1998  Stephan Kulow  <coolo@kde.org>

	* added code to change the location/taskbar (very embarrassing)

	* replaced static KSimpleConfig by dynamic KConfig

	* started maintaing the ChangeLog

	
