@@ -49,7 +49,7 @@ public:
     virtual void loadSettings();
     virtual void saveSettings();
     virtual void applySettings();
-    void justSave();
+    bool justSave();
 
 protected slots:
     void visible_changed(int value);
